# lcore-platform

./: .gitignore  README.md  hardhat.config.js  package.json
cartesi-contracts/: README.md  deploy.sh  hardhat.config.ts  package.json  tsconfig.json
cartesi-contracts/.cartesi/image/: hash
cartesi-contracts/scripts/: deploy-kc-chain.ts  update-template-hash.ts
contracts/: DeviceRegistry.sol
contracts/stylus/: CartesiVerifierStylus.rs  DeviceRegistryStylus.rs  IoTDataProcessorStylus.rs  VerifiedIoTIntelligenceStylus.rs
scripts/: deploy.js  deploy_cartesi_verifier.js  deploy_full_integration.js  deploy_iot_processor.js  deploy_stylus_contracts.js  deploy_verified_iot_intelligence.js
stylus-contracts/: deploy.sh  quick-test.sh  run-deploy-and-test.sh  test-contracts.sh  test-device-registry-v7.sh
stylus-contracts/device_registry/: Cargo.toml  rust-toolchain.toml
stylus-contracts/device_registry/src/: lib.rs  main.rs
stylus-contracts/iot_data_pipeline/: Cargo.toml  rust-toolchain.toml
stylus-contracts/iot_data_pipeline/src/: lib.rs  main.rs
stylus_contracts/: Cargo.toml  MVPIoTProcessor.sol  SimpleStorageStylus.json  rust-toolchain.toml
stylus_contracts/abi/: MVPIoTProcessor_sol_IMVPIoTProcessor.abi
stylus_contracts/src/: lib.rs  main.rs
test/: DeviceRegistry.test.js  check-balance.js  complete-end-to-end-test.js  minimal-working-test.js  phase2-integration.js  phase2-summary.js  working-end-to-end-test.js
