[package]
name = "mvp_iot_processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = "0.7.7"
alloy-sol-types = "0.7.6"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
