[package]
name = "device_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Full, standalone dependencies for portability
stylus-sdk = "0.9.0"
alloy-primitives = { version = "0.8.20", default-features = false, features = ["tiny-keccak"] }
alloy-sol-types = "0.8.20"

[features]
export-abi = ["stylus-sdk/export-abi"] 