[package]
name = "iot_data_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = { version = "0.8.20", features = ["tiny-keccak"] }
alloy-sol-types = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0"

[features]
export-abi = ["stylus-sdk/export-abi"]